site/web/app/themes/host/assets/css/main.css
/* ... */
.favourites__loading[class] {
  margin: 5rem 0;
}

.-loading .favourites__loading[class] {
  display: block;
}

.favourites__list:empty ~ .favourites__empty {
  display: block;
}

.favourites__close[class][class] {
  position: absolute;
  top: 1.875rem;
  right: 1.875rem;
  width: 2.5rem;
  height: 2.5rem;
  padding: 0.625rem;
  border: 0;
  background: transparent;
  color: rgba(0, 0, 0, 0.3);
}

.favourites__close[class][class]:hover {
  background: rgba(0, 0, 0, 0.1);
  color: rgba(0, 0, 0, 0.6);
}

.favourites__close[class][class] .svg-icon {
  margin: 0;
}

.favourites__favourite {
  padding-left: 11.25rem;
  background: transparent;
}

.favourites__favourite:after {
  display: table;
  clear: left;
  content: "";
}

.favourites__favourite__image {
  height: 9.375rem;
  width: 9.375rem;
  margin-left: -11.25rem;
  float: left;
  background: #999;
}

.favourites__favourite__image img {
  display: block;
}

.favouritable__container {
  position: relative;
}

.favouritable__container a svg {
  margin-left: 20px;
}

.favouritable__wrapper[class] {
  position: relative;
  margin-top: 80px;
}

.favouritable__wrapper[class] .favouritable {
  left: 0;
  top: -80px;
}

.favouritable {
  position: absolute;
  top: 1.25rem;
  right: 1.25rem;
}

.favouritable .svg-icon {
  display: block;
  height: 1.25rem;
  width: 1.25rem;
  fill: none;
}

.favouritable__button {
  display: block;
  height: 2.5rem;
  width: 2.5rem;
  min-width: 0;
  padding: 0.6875rem 0.625rem 0.5625rem;
  border: 0;
  background: #ccc;
  color: #fff;
}

.favouritable__button:hover {
  background: #d50e3c;
  color: #fff;
}

.-favourite .favouritable__button {
  background: #d50e3c;
}

.-favourite .favouritable__button:hover {
  background: #b71539;
}

.favouritable__icon {
  stroke: #fff;
}

@keyframes favouritable-boom {
  from {
    transform: scale(1.2);
    opacity: 1;
  }
  to {
    transform: scale(7.5);
    opacity: 0;
  }
}

.favouritable__boom {
  position: absolute;
  top: 0.6875rem;
  left: 0.625rem;
  transform: scale(0);
  transform-origin: 50% 50%;
  z-index: 1;
  stroke: #d50e3c;
}

.-favourite.-added .favouritable__boom {
  animation: favouritable-boom 2s 1;
}

.favouritable__wrapper--dark .favouritable__container .favouritable:after {
  color: rgba(0, 0, 0, 0.2);
}

.favouritable__wrapper--dark .favouritable__container .favouritable .favouritable__button {
  background: rgba(0, 0, 0, 0.2);
}

.favouritable__wrapper--dark .favouritable__container .favouritable .favouritable__button:hover, .favouritable__wrapper--dark .favouritable__container .favouritable .favouritable__button:focus {
  background: #d50e3c;
  color: #fff;
}

.favouritable__container.-favourite .favouritable:after {
  color: #fff;
}

.favouritable__container.-favourite .favouritable .favouritable__button {
  background: #d50e3c;
}

.favouritable__container.-favourite .favouritable .favouritable__button:hover, .favouritable__container.-favourite .favouritable .favouritable__button:focus {
  background: #b71539;
}

.transport-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.transport-list__item {
  margin-bottom: 2.5rem;
}

.transport-list__icon {
  width: 3.4375rem;
  height: 2.5rem;
  margin-right: 10px;
}

.transport-list__listing {
  list-style: none;
  margin: 0;
  padding: 0;
}

.transport-list__listing-item {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: start;
      justify-content: flex-start;
  -ms-flex-align: center;
      align-items: center;
  margin-bottom: 0.625rem;
}

.transport-list__content {
  width: calc(100% - rem(55px));
  padding-left: 0.625rem;
  display: inline-block;
}

.transport-list__content:first-line {
  font-weight: bold;
  color: #00c0f3;
}

.transport-list__heading {
  color: #fff !important;
}

.transport-list__heading:first-line {
  color: #fff !important;
}

.location-related-building-btn-container {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: row;
      flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.location-related-building-dots {
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -ms-flex: 1;
      flex: 1;
}

.related-building-aside-image {
  display: -ms-flexbox;
  display: flex;
  min-height: 40vh;
}

.related-building-aside-content {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
      flex-direction: column;
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-line-pack: center;
      align-content: center;
}

.related-building-aside-content__icon {
  display: block;
  margin: 0 auto 20px;
}

.carosel-infobox {
  display: none;
}

.carosel-infobox p {
  margin: 0;
}

.carousel-infobox__heading {
  margin-bottom: 10px;
}

.carousel-infobox__subheading {
  margin-top: 20px;
}

.carousel-infobox__subheading + :not(.carousel-infobox__subheading) {
  margin-top: 5px;
}

.carousel-infobox__underlink-link {
  position: relative;
  transition: color ease-in-out 0.2s;
}

.carousel-infobox__underlink-link:before, .carousel-infobox__underlink-link:after {
  content: "";
  position: absolute;
  bottom: 0;
}

.carousel-infobox__underlink-link:before {
  width: calc(100% + 15px);
  height: 0.0625rem;
  left: 0;
  background-color: #21293c;
  transition: background-color ease-in-out 0.2s;
}

.carousel-infobox__underlink-link:after {
  content: ">";
  right: -0.9375rem;
}

.carousel-infobox__underlink-link:hover, .carousel-infobox__underlink-link:focus {
  text-decoration: none;
  color: #fff;
}

.carousel-infobox__underlink-link:hover:before, .carousel-infobox__underlink-link:focus:before {
  background-color: #fff;
}

.secondary-split-feature__aside {
  display: -ms-flexbox;
  display: flex;
}

.secondary-split-feature__main {
  position: relative;
}

.secondary-split-feature__main .secondary-split-feature__content {
  max-width: 45rem;
}

.secondary-split-feature__main .secondary-split-feature__content h2 {
  z-index: 1000;
}
/* ... */

